--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,19 +1,29 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
     <title>Document</title>
 </head>
 <body>
-
-<div th:fragment="script-js">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<div th:fragment="footer-base" id="footer" class="text-center">
+    <hr>
+    <h3>Project released for JAVA-NATIONAL-05</h3>
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            <ul class="list-inline">
+                <li><a id="footer-a1" href="http://www.scoalainformala.ro">SIIT</a></li>
+                <li><a id="footer-a2" href="https://scoalainformala.ro/program/java-development/">JAVA Development</a></li>
+                <li><a id="footer-a3" href="https://scoalainformala.ro/our_team/danut-chindris/">Mentor</a></li>
+                <li><a id="footer-a4" href="#">No Privacy related issues</a></li>
+                <li><a id="footer-a5" href="https://scoalainformala.ro/contact/">Contact</a></li>
+            </ul>
+            <p class="copyright">Copyright © 2021 - <a id="name-footer" href="https://www.net-instructor.ro" target="_blank">Cosmin Bondoi</a> - All Rights
+                Reserved.
+            </p>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
