--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,16 +1,10 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <div th:fragment="css-link">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous">
-        <link th:href="@{/css/custome.css}" rel="stylesheet">
-    </div>
 
     <title>Document</title>
 </head>
@@ -20,48 +14,49 @@
         <div class="px-3 py-2 bg-dark text-black">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a href="/"
+                    <a th:href="@{/}" id="logo_header"
                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        Airport Data
+                        AIR <-> PORTAL
                     </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="@{/index}" class="nav-link text-secondary">
+                            <a th:href="@{/index}" id="home_header" class="nav-link text-white">
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="" class="nav-link text-white">
+                            <a href="" id="airport_header" class="nav-link text-white">
                                 Airports
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
+                            <a href="#" id="airline_header" class="nav-link text-white">
                                 Airlines
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white">
+                            <a href="#" id="flights_header" class="nav-link text-white">
                                 Flights
                             </a>
                         </li>
                         <li>
-                            <a href="@{/dashboard}" class="nav-link text-white">
+                            <a th:href="@{/dashboard}" id="dashboard_header" class="nav-link text-white">
                                 Dashboard
                             </a>
                         </li>
                         <li>
-                            <a th:href="@{/login}" class="btn btn-light text-dark me-2">Login</a>
-
-                        </li>
-                        <li>
-                            <a href="@{/signin}" class="btn btn-warning">Signin</a>
-                        </li>
-                        <li>
-                            <a th:href="@{/about}" class="nav-link text-white">
+                            <a th:href="@{/about}" id="about_header" class="nav-link text-white">
                                 About us
                             </a>
+                        </li>
+                        <li>&nbsp;<->&nbsp;</li>
+                        <li sec:authorize="!isAuthenticated()">
+                            <a th:href="@{/login}" class="btn btn-outline-info me-2">Login</a>
+                        </li>
+                        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" class="btn btn-outline-info me-2">Logout</a></li>
+                        <li sec:authorize="!isAuthenticated()">
+                            <a th:href="@{/signup}" class="btn btn-outline-primary me-2">Sign in</a>
                         </li>
                     </ul>
                 </div>
