Add Airline and Airport Controller and html files. Implement pageable feature

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -25,9 +25,11 @@ body {
     
 } */
 
-#airport_list_index, #jumbo_index{
-    color: white;
-}
+#airport_list_index,
+#airline_list_index,
+#jumbo_index        {
+                    color: white;
+                }
 
 a {
     text-decoration: none;
