--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -18,7 +18,7 @@
 <section>
     <div class="container">
         <div id="jumbo_index" class="jumbotron">
-            <h1 class="display-4">"Dashboard"</h1>
+            <h1 id="start_flying" class="display-4">"Dashboard"</h1>
             <p class="lead">Hello Cosmin! </p>
             <p class="lead">This is the admin page. Feel free to "show off" your master skills. </p>
             <a class="btn btn-outline-light my-2 my-sm-0" href="#"
@@ -50,7 +50,7 @@
             <div class="controls-row row">
                 <div class="control-group col-md-12">
                     <div class="table-responsive-md ">
-                        <table class="table table-bordered border-light" id="dashboard-table">
+                        <table class="table table-bordered-rounded border-light" id="dashboard-table">
                             <tr>
                                 <th scope="col">Airline</th>
                                 <th scope="col">Flight No</th>
@@ -77,7 +77,7 @@
                                         <a href="#"
                                            class="btn btn-outline-danger btn-xs"
                                            style="padding: 5px; margin: 2px"
-                                           onclick="return confirm('You're about to `drop down` a flight. Are you sure you wanna do that?')"
+                                           onclick="return confirm('You are about to `drop down` a flight. Are you sure you wanna do that?')"
                                            title="Delete"><img src="https://img.icons8.com/flat-round/16/000000/delete-sign.png"/></a>
                                     </div>
                                 </td>
