--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,7 +16,7 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a th:href="@{/}" id="logo_header"
                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        AIR <-> PORTAL
+                        AIR-PORTAL
                     </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
