--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,6 +43,8 @@
             <div class="mb-6">
                 <button style="width: 100%" type="submit" class="btn btn-outline-primary text-white">Login</button>
             </div>
+            <hr>
+            <div class="mb-6"><a id="go_to_home_login"style="width: 100%" th:href="@{/}">Go to HOME page</a></div>
         </form>
     </div>
 </div>
