--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -6,9 +6,14 @@ body {
     background: fixed;
     background-size: 100% 100% !important;
 }
-
-#logo_header {
-    font-size: 1.6rem;
+#start_flying{
+    font-size: 2.5rem;
+    font-family: 'Akaya Kanadaka', cursive;
+    font-weight: bold;
+}
+#logo_header
+ {
+    font-size: 1.5rem;
     font-family: 'Akaya Kanadaka', cursive;
     font-weight: bold;
 }
@@ -16,8 +21,10 @@ body {
 #flights_header,
 #airport_header, #home_header, 
 #airline_header, #dashboard_header,
-#about_header {
-    font-size: 1.3rem;
+#about_header,
+#go_to_home_login
+ {
+    font-size: 1.2rem;
     font-family: 'Akaya Kanadaka', cursive;
     font-weight: normal;
 }
@@ -28,11 +35,14 @@ body {
 
 #dashboard-table {
     vertical-align: middle;
+    border-radius: 6%;
 }
 
 #airport_list_index,
 #airline_list_index,
-#jumbo_index, #dashboard-table
+#jumbo_index, #dashboard-table,
+#go_to_home_login,
+#signin_label
 {
     color: white;
 }
