--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 <section>
     <div class="container">
         <div id="jumbo_index" class="jumbotron">
-            <h1 class="display-4">"START FLYING!"</h1>
+            <h1 id="start_flying" class="display-4">"START FLYING"</h1>
             <p class="lead">"Your wings already exist. All you have to do is fly."</p>
             <p class="lead">Just select your favorite destination, and let us do the search for you.</p>
             <hr class="my-4">
