--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,9 +16,155 @@
     header
 </div>
 
-<h1>ura si la gara</h1>
+<div class="container">
+    <div id="jumbo_index" class="jumbotron">
+        <h1 id="start_flying" class="display-4">"START FLYING"</h1>
+        <p class="lead">"Your wings already exist. All you have to do is fly."</p>
+        <p class="lead">Create an account by completing the form bellow. All fields are required.</p>
+        <hr class="my-4">
+    </div>
+</div>
 
+<div class="container">
+    <div class="jumbotron">
+        <div class="controls-row row">
+            <div class="control-group col-sm-10 offset-sm-2">
 
+                <form th:action="@{/save}" th:object="${userDto}" method="post">
+                    <div class="row mb-3">
+                        <label id="signin_label" for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-7">
+                            <input type="email" class="form-control" th:field="*{email}" id="inputEmail">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label id="signin_label" for="password" class="col-sm-2 col-form-label">Password</label>
+                        <div class="col-sm-7">
+                            <input type="password" class="form-control" th:field="*{password}" id="password">
+                        </div>
+                    </div>
+<!--                    <div class="row mb-3">-->
+<!--                        <label id="signin_label" for="confirmPassword" class="col-sm-2 col-form-label">Confirm-->
+<!--                            Password</label>-->
+<!--                        <div class="col-sm-7">-->
+<!--                            <input type="password" class="form-control" id="confirmPassword">-->
+<!--                        </div>-->
+<!--                    </div>-->
+                    <div class="row mb-3">
+                        <label id="signin_label" for="firstName" class="col-sm-2 col-form-label">First Name</label>
+                        <div class="col-sm-7">
+                            <input type="text" class="form-control" th:field="*{firstName}" id="firstName">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label id="signin_label" for="lastName" class="col-sm-2 col-form-label">Last Name</label>
+                        <div class="col-sm-7">
+                            <input type="text" class="form-control" th:field="*{lastName}" id="lastName">
+                        </div>
+                    </div>
+                    <!--                    <fieldset class="row mb-3">-->
+                    <!--                        <legend class="col-form-label col-sm-2 pt-0">Radios</legend>-->
+                    <!--                        <div class="col-sm-10">-->
+                    <!--                            <div class="form-check">-->
+                    <!--                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>-->
+                    <!--                                <label class="form-check-label" for="gridRadios1">-->
+                    <!--                                    First radio-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                            <div class="form-check">-->
+                    <!--                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">-->
+                    <!--                                <label class="form-check-label" for="gridRadios2">-->
+                    <!--                                    Second radio-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                            <div class="form-check disabled">-->
+                    <!--                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>-->
+                    <!--                                <label class="form-check-label" for="gridRadios3">-->
+                    <!--                                    Third disabled radio-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </fieldset>-->
+                    <!--                    <div class="row mb-3">-->
+                    <!--                        <div class="col-sm-10 offset-sm-2">-->
+                    <!--                            <div class="form-check">-->
+                    <!--                                <input class="form-check-input" type="checkbox" id="gridCheck1">-->
+                    <!--                                <label class="form-check-label" for="gridCheck1">-->
+                    <!--                                    Example checkbox-->
+                    <!--                                </label>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <div class="control-group col-sm-4">
+                        <button style="width: 70%" type="submit" class="btn btn-outline-primary text-white">Sign in
+                        </button>
+                    </div>
+                    <div class="row sm-10" th:if="${param.success}">
+                        <div class="row mb-7 alert alert-info">Congratulations! You are ready to fly! <br> Registration complete!</div>
+                    </div>
+                </form>
+                <!--                <form class="row g-3 needs-validation" validate>-->
+                <!--                    <div class="col-sm-3">-->
+                <!--                        <label for="validationCustom01" class="form-label">First name</label>-->
+                <!--                        <input type="text" class="form-control" id="validationCustom01" value="Mark" required>-->
+                <!--                        <div class="valid-feedback">-->
+                <!--                            Looks good!-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-3">-->
+                <!--                        <label for="validationCustom02" class="form-label">Last name</label>-->
+                <!--                        <input type="text" class="form-control" id="validationCustom02" value="Otto" required>-->
+                <!--                        <div class="valid-feedback">-->
+                <!--                            Looks good!-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-3">-->
+                <!--                        <label for="validationCustomUsername" class="form-label">Username</label>-->
+                <!--                        <div class="input-group has-validation">-->
+                <!--                            <span class="input-group-text" id="inputGroupPrepend">@</span>-->
+                <!--                            <input type="text" class="form-control" id="validationCustomUsername"-->
+                <!--                                   aria-describedby="inputGroupPrepend" required>-->
+                <!--                            <div class="invalid-feedback">-->
+                <!--                                Please choose a username.-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-5">-->
+                <!--                        <label for="validationCustom03" class="form-label">City</label>-->
+                <!--                        <input type="text" class="form-control" id="validationCustom03" required>-->
+                <!--                        <div class="invalid-feedback">-->
+                <!--                            Please provide a valid city.-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-2">-->
+                <!--                        <label for="validationCustom04" class="form-label">State</label>-->
+                <!--                        <select class="form-select" id="validationCustom04" required>-->
+                <!--                            <option selected disabled value="">Choose...</option>-->
+                <!--                            <option>...</option>-->
+                <!--                        </select>-->
+                <!--                        <div class="invalid-feedback">-->
+                <!--                            Please select a valid state.-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-2">-->
+                <!--                        <label for="validationCustom05" class="form-label">Zip</label>-->
+                <!--                        <input type="text" class="form-control" id="validationCustom05" required>-->
+                <!--                        <div class="invalid-feedback">-->
+                <!--                            Please provide a valid zip.-->
+                <!--                        </div>-->
+                <!--                    </div>-->
 
+                <!--                    <div class="col-9">-->
+                <!--                        <button class="btn btn-primary" type="submit">Submit form</button>-->
+                <!--                    </div>-->
+                <!--                </form>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer th:replace="footer::footer-base"></footer>
+
+<script src="#" th:replace="base :: bootstrap-js"></script>
 </body>
 </html>
