--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                     <div class="row sm-10" th:if="${param.success}">
-                        <div class="row mb-7 alert alert-info">Congratulations! You are ready to fly! <br> Registration complete!</div>
+                        <div class="row mb-7 alert success">Congratulations! You are ready to fly! <br> Registration complete!</div>
                     </div>
                 </form>
                 <!--                <form class="row g-3 needs-validation" validate>-->
